frontend/test/should_fail/mismatch_of_match_class_type3.grg
match class Foo
{
	def var i:int;
}

match class Bar
{
	def var i:int;
}

test bla implements Foo, Bar
{
---
	def var i:int;
}

filter filterRemoveNonMatching<class Foo>(var i:int)
{
	for(m:match<class Bar> in i)
	{
		if(m.i != i) {
			m = null; 
		}
	}
}
